k8s/manifests-17e697/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-17e697
  namespace: journee
  labels:
    app: journee-17e697
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-17e697
  template:
    metadata:
      labels:
        app: journee-17e697
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-17e697
          image: gcr.io/my-docker-471807/journee:v7.0.0
          ports:
            - containerPort: 3000
