k8s/manifests-17e697/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-17e697
  namespace: journee
spec:
  selector:
    app: journee-17e697
  ports:
    - port: 80
      targetPort: 3000
